change eureka port to 8761

--- a/eureka-server.properties
+++ b/eureka-server.properties
@@ -1,4 +1,4 @@
-server.port= 9102
+server.port= 8761
 
 spring.application.name=eureka-server
 
@@ -10,3 +10,7 @@ eureka.client.fetchRegistry=false
 
 spring.cloud.config.import-check.enabled=false
 
+
+#spring.cloud.config.uri=http://localhost:9101
+
+#spring.application.name=eureka-server
