--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -16,3 +16,5 @@ spring.jpa.hibernate.ddl-auto=none
 
 #Nos configurations
 mes-configs.limitDeProduits= 5
+
+eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
