add microservice-clientui properties file

--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -1,12 +1,7 @@
 
-
-#server.port=9001
-
 #Configurations H2
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
-
-
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -17,4 +12,5 @@ spring.jpa.hibernate.ddl-auto=none
 #Nos configurations
 mes-configs.limitDeProduits= 5
 
+#Configurations Eureka
 eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
