--- a/microservice-clientui.properties
+++ b/microservice-clientui.properties
@@ -1,4 +1,7 @@
 
+spring.application.name=microservice-clientui
+server.port=8080
+
 spring.cloud.config.enabled=false
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
