--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -6,6 +6,6 @@ server.port=9011
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 management.endpoints.web.exposure.include=*
 
-#Spring Security
+#Spring Security Basic Auth
 spring.security.user.name=user
 spring.security.user.password=pwd
